  made many minor fixes to bmp.c to make them work:
  - it was possible for various types of read failures to SEGV, both
    as NULL pointer dereferences and buffer overflows
  - some errors, like palettes being too large for the number of bits
    per pixel, were not being caught
  - failing to read all of a packed data structure would not cause
    a read failure
  - invalid compression types were not always caught
  - error messages are more consistent (still not always great messages,
    but one step at a time)
- added bmp_compression_name, bmp_used_colors, bmp_filesize, bmp_bit_count 
  tags on reading a BMP file
- added tools/imager to the distribution.  This is still very 
  experimental and untested.  Patches welcome, if you write tests to go
  with them.
- the BMP reader now validates the bfOffBits value from the BMP header
  and skips to that offset before reading image data.  Previously this
  value was read but otherwise ignored.
- added --palette action to tools/imager
- i_img_pal_new() now releases the image object memory if creation
  fails.
- set i_format to gif when reading gif files and test for it
- set i_format to pnm when reading pnm files and test for it
- set i_format to tga when reading tga files and test for it
- handle image creation failures when reading tga files
- set i_format to tiff when reading tiff images and test for it
- handle image creation failures when reading tiff files
- test t/t35ttfont.t no longer requires TTFONTTEST to be set (and 
  hasn't for a long time,) removed that requirement from README
- updated home page URLs throughout the .pods
- added information on reporting bugs to the SUPPORT section of Imager.pm
- regops.perl now sorts the dumped data structure to produce minimal diffs

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
